src/objects/MUSW__PRTANY_TEMPLATE__c.object
<CustomObject>
    <description>Internal - html template to format content</description>
    <fields>
        <fullName>MUSW__Content__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Date_Format__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Format</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__PRTANY_PACKAGE__c</fullName>
        <label>Printer Package</label>
        <referenceTo>MUSW__PRTANY_PACKAGE__c</referenceTo>
        <relationshipName>R00N60000001Hvr8EAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MUSW__css__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>css</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Printer Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Printer Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>